# reinze-lib-2004scape

./: Cargo.toml  README.md  trivia.txt
src/: boost.rs  challenge.rs  common.rs  coords.rs  grats.rs  lib.rs  noburn.rs  rsn.rs  speakto.rs  spell.rs  stats.rs  track.rs  trivia.rs  worlds.rs
src/stats/: agility.rs  cooking.rs  crafting.rs  firemaking.rs  fishing.rs  fletching.rs  herblore.rs  magic.rs  mining.rs  prayer.rs  runecraft.rs  skill.rs  smithing.rs  thieving.rs  woodcutting.rs
src/trivia/: questions.rs
