[package]
name = "reinze-lib-2004scape"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
common = { git = "https://github.com/ryanwohara/reinze-lib-common.git", branch = "main", package = "reinze-lib-common" }
log = "0.4"
meval = { git = "https://github.com/ryanwohara/meval-rs.git", branch = "main" }
mysql = "27.0.0"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
tokio = { version = "1.49.0", features = ["full"] }

[lib]
crate-type = ["dylib"]
