[package]
name = "reinze-lib-2004scape"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
common = { path = "../reinze-lib-common", package = "reinze-lib-common" }
log = "0.4"
meval = { git = "https://github.com/ryanwohara/meval-rs.git", branch = "main" }
mysql = "28.0.0"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }

[lib]
crate-type = ["dylib"]
