[package]
name = "reinze-lib-2004scape"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
common = { path = "../reinze-lib-common", package = "reinze-lib-common" }
log = "0.4"
meval = { git = "https://github.com/ryanwohara/meval-rs.git", branch = "main" }
mysql = "28"
regex = "1.12"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1"

[lib]
crate-type = ["dylib"]
